# multi_robot_flocking

./: CMakeLists.txt  README.md  package.xml  report.md  setup.py
launch/: gazebo.launch  stageros.launch
nodes/: multi_robot_flocking
